# testruckt-studio

./: .gitignore  ANALYSIS_INDEX.md  BUILD_SUCCESSFUL.md  BUILD_VERIFICATION.md  CODE_STRUCTURE_REPORT.md  CONTRIBUTING.md  COORDINATE_ALIGNMENT_FIX.md  COORDINATE_DEBUG_ANALYSIS.md  COORDINATE_FIX_APPLIED.md  Cargo.toml  FEATURE_COMPLETENESS_COMPARISON.md  IME_ANALYSIS_README.md  IME_FINDINGS_SUMMARY.txt  IME_IMPLEMENTATION_GUIDE.md  IME_QUICK_REFERENCE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.txt  MASTER_TASKS.md  PERFORMANCE_BASELINE.md  PHASE2_ANALYSIS.md  PHASE2_FEATURES.csv  PHASE2_QUICK_START.md  PHASE2_README.md  PHASE2_SUMMARY.md  PHASE2_VISUAL_MAP.txt  PHASE3_IME_INVESTIGATION.md  PHASE3_IME_STATUS.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_JAPANESE_INPUT_GUIDE.md  PHASE_1_PROGRESS.md  PHASE_2_PROGRESS.md  README.md  README_IME_ANALYSIS.txt  RESIZE_FIX_FINAL.md  RESIZE_FIX_REPORT.md  ROADMAP_2025.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/document/: builder.rs  metadata.rs  mod.rs  page.rs  page_size.rs
crates/core/src/layout/: canvas.rs  engine.rs  geometry.rs  mod.rs
crates/core/src/template/: definition.rs  library.rs  mod.rs  style.rs
crates/core/src/typography/: color.rs  font_catalog.rs  mod.rs  rich_text.rs  text_style.rs
crates/core/src/workspace/: assets.rs  history.rs  mod.rs  project.rs
crates/db/: Cargo.toml
crates/db/src/: item_bank.rs  lib.rs  models.rs  schema.rs
crates/ui/: Cargo.toml
crates/ui/src/: clipboard.rs  error.rs  lib.rs  template_manager.rs  undo_redo.rs
crates/ui/src/app/: actions.rs  auto_save.rs  mod.rs  recent_files.rs  state.rs
crates/ui/src/canvas/: ARCHITECTURE.md  INPUT_MODULE.md  alignment.rs  dirty_region.rs  grid_rendering.rs  input.rs  keyboard.rs  mod.rs  mouse.rs  overlays.rs  page_thumbnail.rs  rendering.rs  rendering_images.rs  rendering_selection.rs  rendering_text.rs  selection.rs  snapping.rs  (+3 more)
crates/ui/tests/: clipboard_integration.rs  dnd_layers.rs  document_io.rs  export.rs  grouping.rs  layers_panel.rs  multipage.rs  page_thumbnail.rs  undo_redo_integration.rs
(+97 files in other folders)
