[workspace]
members = [
    "crates/core",
    "crates/ui",
    "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["testruct team"]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.metadata]
license = "MIT"
