[package]
name = "testruct-db"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
testruct-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
tracing = { workspace = true }
